--- a/release.yml
+++ b/release.yml
@@ -4,6 +4,7 @@ metadata:
   name: cicd-test
   namespace: default
   annotations:
+    fluxcd.io/automated: "true"
     filter.fluxcd.io/nginx: semver:~1.1
 spec:
   releaseName: cicd-test
@@ -12,7 +13,6 @@ spec:
     ref: master
     path: cicd/application/helm
   values:
-    replicaCount: 1
     nginx:
       image:
         tag: v1.1.9-staging
