--- a/release.yml
+++ b/release.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
   annotations:
     fluxcd.io/automated: "true"
-    filter.fluxcd.io/nginx: semver:~1.1
+    filter.fluxcd.io/nginx: regex:^1.1.*
 spec:
   releaseName: cicd-test
   chart:
